# trust-vault

./: .gitignore  Dockerfile  FRONTEND_SPEC.md  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  go.mod  go.sum
.cursor/plans/: trustvault_platform_build_7ba86799.plan.md
.cursor/rules/: clean-architecture.mdc  coding-complete.mdc  coding-conventions.mdc  coding-rules.mdc  refactoring.mdc  session-continuity.mdc  trustvault-project.mdc
.cursor/status/: progress.md
agent/: Makefile  README.md  go.mod  main.go
agent/api/: client.go
agent/config/: config.go
agent/scanner/: patterns.go  scanner.go
classifier/: Dockerfile  main.py  requirements.txt
cmd/migrate/: main.go
cmd/server/: main.go
docker/mysql-init/: init.sql
docs-app/: Dockerfile  capture-screenshots.js  next.config.js  package-lock.json  package.json  take-screenshots.js  theme.config.tsx
docs-app/pages/: _meta.json  downloads.mdx  index.mdx
docs-app/public/: SecureLens-Enterprise-Deck.md
docservice/: Dockerfile  main.py  requirements.txt
ingestion/: Dockerfile  main.py  requirements.txt
internal/api/: auth.go  auto_governance.go  classify.go  dashboard.go  datasource.go  documents.go  downloads.go  dpia_cde_profiling.go  endpoint_scan.go  endpoints.go  gate.go  integration_advisor_test.go  integration_audit_test.go  integration_auth_test.go  integration_classify_test.go  integration_jobs_test.go  integration_quality_test.go  integration_test.go  integration_users_test.go  observability_jobs.go  openapi.go  policy.go  quality_privacy.go  remediation_reports.go  residency.go  rot_integrations.go  server.go  server_test.go  sso.go  sso_oidc.go  sso_saml.go  tenant.go
internal/docs/: swagger.go
internal/domain/: advisor.go  classify.go  classify_test.go  geo_detect.go  govern.go  govern_test.go  llm_proxy.go  notifications.go  quality.go  quality_test.go  vectordb.go
internal/events/: bus.go  bus_test.go
internal/pkg/: audit.go  helpers.go  helpers_test.go  logging.go  metrics.go  middleware.go  middleware_test.go  versioning.go
internal/scheduler/: scheduler.go
models/: Dockerfile
sdk/node/: LICENSE  (+7 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/examples/: basic_query.py  langchain_integration.py  rag_integration.py
sdk/python/securelens/: __init__.py  auth.py  client.py  exceptions.py  gate.py  models.py  utils.py
sdk/python/securelens/integrations/: __init__.py
tests/: e2e_functional_test.py
trust-vault-frontend/: .dockerignore  .env.example  BUILD_SUMMARY.md  Dockerfile  E2E_TEST_REPORT.md  README.md  SETUP.md  audit-report.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.tsbuildinfo
(+224 files in other folders)
